K8s/api-gateway-deployement.yaml
# apigateway Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigateway
          image: aadilnv/nexium-apigateway:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
# apigateway Service
apiVersion: v1
kind: Service
metadata:
  name: apigateway
spec:
  selector:
    app: apigateway
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
